--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>This is the main entry point of your website.</p>
     <ul>
           <li><a href="https://oamacor.wordpress.com/">Ejercicios Teoricos en mi worldpress</a></li>
+          <li><a href="https://github.com/Oscar0000000/PROG">Ejercicios del tema 1 de Python</a></li>
     </ul>
 </body>
 </html>
