--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Mi Portfolio</h1>
-    <p>This is the main entry point of your website.</p>
+    <p>Este es el punto de entrada de mi portfolio donde dejare los ejercicios teoricos y los ejercicios practicos que hemos ido haciendo</p>
     <ul>
           <li><a href="https://oamacor.wordpress.com/">Ejercicios Teoricos en mi worldpress</a></li>
           <li><a href="https://github.com/Oscar0000000/PROG">Ejercicios del tema 1 de Python</a></li>
