--- a/index.html
+++ b/index.html
@@ -3,108 +3,103 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio de Programación – Oscar</title>
+  <title>Portfolio de Oscar – Programación</title>
   <style>
     body {
-      font-family: "Segoe UI", Roboto, Arial, sans-serif;
-      background-color: #f4f6f8;
+      font-family: 'Verdana', sans-serif;
+      background-color: #f0f0f5;
       margin: 0;
       padding: 0;
-      color: #333;
+      color: #222;
     }
+
     header {
-      background-color: #007acc;
-      color: white;
+      background-color: #4b6cb7;
+      color: #fff;
       text-align: center;
-      padding: 30px 15px;
+      padding: 40px 20px;
     }
+
     header h1 {
       margin: 0;
-      font-size: 2em;
+      font-size: 2.2em;
     }
-    nav {
-      background: #005fa3;
-      text-align: center;
-      padding: 10px;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-    }
-    nav a:hover {
-      text-decoration: underline;
-    }
+
     main {
-      max-width: 900px;
+      max-width: 850px;
       margin: 30px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      padding: 0 20px;
     }
+
     section {
-      margin-bottom: 40px;
+      background-color: #fff;
+      margin-bottom: 25px;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.08);
     }
+
     h2 {
-      border-left: 5px solid #007acc;
-      padding-left: 10px;
-      color: #007acc;
+      color: #4b6cb7;
+      margin-bottom: 15px;
     }
-    a.btn {
+
+    a.button {
       display: inline-block;
-      margin-top: 10px;
-      padding: 10px 20px;
-      background: #007acc;
+      background-color: #4b6cb7;
       color: white;
+      padding: 10px 18px;
       border-radius: 5px;
       text-decoration: none;
+      margin-top: 10px;
     }
-    a.btn:hover {
-      background: #005fa3;
+
+    a.button:hover {
+      background-color: #3a539b;
     }
+
     footer {
-      background: #007acc;
-      color: white;
       text-align: center;
       padding: 15px;
-      margin-top: 30px;
+      background-color: #4b6cb7;
+      color: white;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Portfolio de Programación – Oscar</h1>
-    <p>Ejercicios, teoría y proyectos personales</p>
+    <h1>Oscar – Portfolio de Programación</h1>
+    <p>Ejercicios, teoría y proyectos realizados durante el curso</p>
   </header>
 
-  <nav>
-    <a href="#ejercicios">Ejercicios</a>
-    <a href="#teoria">Teoría</a>
-    <a href="#contacto">Contacto</a>
-  </nav>
-
   <main>
-    <section id="ejercicios">
+
+    <section>
       <h2>Ejercicios de Programación</h2>
-      <p>En este apartado encontrarás los ejercicios desarrollados durante el curso, organizados y subidos a mi repositorio de GitHub.</p>
-      <a class="btn" href="https://github.com/Oscar0000000/PROG" target="_blank">Ver ejercicios en GitHub</a>
+      <p>Todos los ejercicios realizados durante las clases están disponibles en mi repositorio de GitHub.</p>
+      <a class="button" href="https://github.com/Oscar0000000/PROG" target="_blank">Ver ejercicios</a>
     </section>
 
-    <section id="teoria">
-      <h2>Teoría y apuntes</h2>
-      <p>Reflexiones, conceptos y documentación desarrollada a lo largo del curso, publicados en mi blog de WordPress.</p>
-      <a class="btn" href="https://oamacor.wordpress.com" target="_blank">Visitar mi blog en WordPress</a>
+    <section>
+      <h2>Teoría y Apuntes</h2>
+      <p>He documentado los conceptos teóricos y explicaciones en mi blog personal de WordPress.</p>
+      <a class="button" href="https://oamacor.wordpress.com" target="_blank">Visitar mi blog</a>
     </section>
 
-   
+    <section>
+      <h2>Sobre mí</h2>
+      <p>Soy estudiante de programación y este portfolio refleja mi aprendizaje y práctica en distintos lenguajes y conceptos.</p>
+      <p>Contacto: <strong>tuemail@example.com</strong></p>
+    </section>
+
   </main>
 
   <footer>
-    <p>© 2025 Oscar – Portfolio de Programación</p>
+    <p>© 2025 Oscar – Todos los derechos reservados</p>
   </footer>
 
 </body>
 </html>
+
