--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@ print(mensaje)
     <p>Ejemplo simple de “Hola Mundo” usando una variable para almacenar el texto.</p>
 
     <h2>Ejercicios del Tema 2 – Python</h2>
-    <p>A continuación se muestran algunos ejercicios que he realizado del Tema 2 de Python:</p>
-    
-    <div class="code-snippet">
+    <p>Todos los ejercicios realizados del Tema 2 de Python están disponibles en GitHub:</p>
+    <ul>
+    <li><a href="https://github.com/Oscar0000000/TEMA-2-PYTHON" target="_blank">Ver ejercicios del Tema 2 en GitHub</a></li>
+    </ul>
 
-     <p>Ejercicios completos disponibles en mi repositorio del <a href="https://github.com/Oscar0000000/TEMA-2-PYTHON" target="_blank">Tema 2 – Python</a>.</p>
 
     <h2>Teoría y apuntes</h2>
     <p>He documentado los conceptos teóricos aprendidos durante el curso en mi blog:</p>
