--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@ print(mensaje)
     <li><a href="https://github.com/Oscar0000000/TEMA-2-PYTHON" target="_blank">Ver ejercicios del Tema 2 en GitHub</a></li>
     </ul>
 
-
     <h2>Teoría y apuntes</h2>
     <p>He documentado los conceptos teóricos aprendidos durante el curso en mi blog:</p>
     <ul>
@@ -112,6 +111,12 @@ print(mensaje)
     <h2>Sobre mí</h2>
     <p>Soy estudiante de programación y este portfolio refleja mis aprendizajes, ejercicios y proyectos.</p>
     
+    <h2>Ejercicios de Java</h2>
+    <p>Todos mis ejercicios de Java están disponibles en GitHub:</p>
+    <ul>
+      <li><a href="https://github.com/Oscar0000000/Programacion_Java" target="_blank">Ver ejercicios en Java en GitHub</a></li>
+    </ul>
+
   </main>
 
   <footer>
@@ -120,3 +125,4 @@ print(mensaje)
 
 </body>
 </html>
+
