--- a/index.html
+++ b/index.html
@@ -85,9 +85,10 @@
 
   <main>
     <h2>Mis ejercicios</h2>
-    <p>Todos los ejercicios que he realizado durante el curso están disponibles en GitHub:</p>
+    <p>Todos los ejercicios que he realizado durante el curso están disponibles en GitHub, tengo los de python del primer tema y de java orientado a objetos:</p>
     <ul>
-      <li><a href="https://github.com/Oscar0000000/PROG" target="_blank">Ver ejercicios en GitHub</a></li>
+      <li><a href="https://github.com/Oscar0000000/PROG" target="_blank">Ejercicios de Programación</a></li>
+      <li><a href="https://github.com/Oscar0000000/Programacion_OO" target="_blank">Programación Orientada a Objetos (POO)</a></li>
     </ul>
     
     <div class="code-snippet">
@@ -99,7 +100,7 @@ print(mensaje)
     <h2>Ejercicios del Tema 2 – Python</h2>
     <p>Todos los ejercicios realizados del Tema 2 de Python están disponibles en GitHub:</p>
     <ul>
-    <li><a href="https://github.com/Oscar0000000/TEMA-2-PYTHON" target="_blank">Ver ejercicios del Tema 2 en GitHub</a></li>
+      <li><a href="https://github.com/Oscar0000000/TEMA-2-PYTHON" target="_blank">Ver ejercicios del Tema 2 en GitHub</a></li>
     </ul>
 
     <h2>Teoría y apuntes</h2>
@@ -125,4 +126,3 @@ print(mensaje)
 
 </body>
 </html>
-
